# javarush_django_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  mypy.ini  project_requirements.md  pyproject.toml  pyrightconfig.json  setup.cfg  setup.sfg
config/: settings.py  settings_test.py  urls.py
orders/: admin.py  cart.py  context_processor.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_address_order_city_order_full_name_order_phone_and_more.py  0003_alter_order_options.py  0004_alter_order_options_order_status_and_more.py  0005_alter_order_options_remove_order_is_paid_and_more.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  (+1 more)
reviews/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: account.html  base.html  cart.html  checkout.html  community.html  contact.html  forgot_password.html  guides-recipes.html  home.html  login.html  order_created.html  product-caramel-malt.html  product-cascade-hops.html  product-centennial-hops.html  product-citra-hops.html  product-imperial-yeast.html  product-maris-otter-malt.html  product-mosaic-hops.html  product-pilsner-malt.html  product-saaz-hops.html  product-safale-us05-yeast.html  product-unmalted-wheat.html  product-west-coast-ipa-kit.html  product_detail.html  products.html  register.html  resources.html
users/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
(+14 files in other folders)
